[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby/lobby2.gd" type="Script" id=1]

[node name="main_menu" type="Node"]
script = ExtResource( 1 )

[node name="menu_container" type="Container" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Panel" type="Panel" parent="menu_container"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.5
margin_top = -96.0
margin_right = 198.0
margin_bottom = 104.0

[node name="vbox_container" type="VBoxContainer" parent="menu_container/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.5
margin_top = -81.0
margin_right = 184.5
margin_bottom = 81.0

[node name="label_title" type="Label" parent="menu_container/Panel/vbox_container"]
margin_right = 369.0
margin_bottom = 14.0
text = "TITLE"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="menu_container/Panel/vbox_container"]
margin_top = 18.0
margin_right = 369.0
margin_bottom = 22.0

[node name="hbox_tabs" type="HBoxContainer" parent="menu_container/Panel/vbox_container"]
margin_top = 26.0
margin_right = 369.0
margin_bottom = 46.0
alignment = 1

[node name="button_host" type="Button" parent="menu_container/Panel/vbox_container/hbox_tabs"]
margin_left = 38.0
margin_right = 185.0
margin_bottom = 20.0
text = "LOBBY_HOST_SERVER"

[node name="button_join" type="Button" parent="menu_container/Panel/vbox_container/hbox_tabs"]
margin_left = 189.0
margin_right = 330.0
margin_bottom = 20.0
text = "LOBBY_JOIN_SERVER"

[node name="spacer2" type="Label" parent="menu_container/Panel/vbox_container"]
margin_top = 50.0
margin_right = 369.0
margin_bottom = 64.0
custom_colors/font_color = Color( 1, 0.410156, 0.410156, 1 )
align = 1
valign = 1

[node name="host_container" type="VBoxContainer" parent="menu_container/Panel/vbox_container"]
margin_top = 68.0
margin_right = 369.0
margin_bottom = 162.0

[node name="grid_host" type="GridContainer" parent="menu_container/Panel/vbox_container/host_container"]
margin_right = 369.0
margin_bottom = 52.0
columns = 2

[node name="label_server_name" type="Label" parent="menu_container/Panel/vbox_container/host_container/grid_host"]
margin_top = 5.0
margin_right = 138.0
margin_bottom = 19.0
text = "LOBBY_SERVER_NAME"

[node name="text_server_name" type="LineEdit" parent="menu_container/Panel/vbox_container/host_container/grid_host"]
margin_left = 142.0
margin_right = 312.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 40

[node name="label_port" type="Label" parent="menu_container/Panel/vbox_container/host_container/grid_host"]
margin_top = 33.0
margin_right = 138.0
margin_bottom = 47.0
text = "LOBBY_PORT"

[node name="text_port" type="LineEdit" parent="menu_container/Panel/vbox_container/host_container/grid_host"]
margin_left = 142.0
margin_top = 28.0
margin_right = 312.0
margin_bottom = 52.0
custom_constants/minimum_spaces = 40

[node name="label_error" type="Label" parent="menu_container/Panel/vbox_container/host_container"]
margin_top = 56.0
margin_right = 369.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 0.410156, 0.410156, 1 )
align = 1
valign = 1

[node name="hbox_host_buttons" type="HBoxContainer" parent="menu_container/Panel/vbox_container/host_container"]
margin_top = 74.0
margin_right = 369.0
margin_bottom = 94.0
alignment = 2

[node name="button_cancel" type="Button" parent="menu_container/Panel/vbox_container/host_container/hbox_host_buttons"]
margin_left = 6.0
margin_right = 176.0
margin_bottom = 20.0
text = "LOBBY_BUTTON_CANCEL"

[node name="button_continue" type="Button" parent="menu_container/Panel/vbox_container/host_container/hbox_host_buttons"]
margin_left = 180.0
margin_right = 369.0
margin_bottom = 20.0
text = "LOBBY_BUTTON_CONTINUE"

[node name="join_container" type="VBoxContainer" parent="menu_container/Panel/vbox_container"]
visible = false
margin_top = 158.0
margin_right = 369.0
margin_bottom = 288.0

[node name="grid_join" type="GridContainer" parent="menu_container/Panel/vbox_container/join_container"]
margin_top = 18.0
margin_right = 369.0
margin_bottom = 88.0
columns = 2

[node name="label_ip_address" type="Label" parent="menu_container/Panel/vbox_container/join_container/grid_join"]
margin_top = 5.0
margin_right = 107.0
margin_bottom = 19.0
text = "LOBBY_ADDRESS"

[node name="text_ip_address" type="LineEdit" parent="menu_container/Panel/vbox_container/join_container/grid_join"]
margin_left = 111.0
margin_right = 281.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 40

[node name="label_port" type="Label" parent="menu_container/Panel/vbox_container/join_container/grid_join"]
margin_top = 33.0
margin_right = 107.0
margin_bottom = 47.0
text = "LOBBY_PORT"

[node name="text_port" type="LineEdit" parent="menu_container/Panel/vbox_container/join_container/grid_join"]
margin_left = 111.0
margin_top = 28.0
margin_right = 281.0
margin_bottom = 52.0
custom_constants/minimum_spaces = 40

[node name="label_error" type="Label" parent="menu_container/Panel/vbox_container/join_container"]
margin_top = 92.0
margin_right = 369.0
margin_bottom = 106.0
custom_colors/font_color = Color( 1, 0.410156, 0.410156, 1 )
align = 1
valign = 1

[node name="hbox_join_buttons" type="HBoxContainer" parent="menu_container/Panel/vbox_container/join_container"]
margin_top = 110.0
margin_right = 369.0
margin_bottom = 130.0
alignment = 2

[node name="button_cancel" type="Button" parent="menu_container/Panel/vbox_container/join_container/hbox_join_buttons"]
margin_left = 13.0
margin_right = 183.0
margin_bottom = 20.0
text = "LOBBY_BUTTON_CANCEL"

[node name="button_connect" type="Button" parent="menu_container/Panel/vbox_container/join_container/hbox_join_buttons"]
margin_left = 187.0
margin_right = 369.0
margin_bottom = 20.0
text = "LOBBY_BUTTON_CONNECT"

[node name="lobby_container" type="Container" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Panel" type="Panel" parent="lobby_container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -96.0
margin_right = 199.0
margin_bottom = 168.0

[node name="vbox_container" type="VBoxContainer" parent="lobby_container/Panel"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.5
margin_top = -117.0
margin_right = 183.5
margin_bottom = -70.0

[node name="label_title" type="Label" parent="lobby_container/Panel/vbox_container"]
margin_right = 367.0
margin_bottom = 14.0
text = "TITLE"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="lobby_container/Panel/vbox_container"]
margin_top = 18.0
margin_right = 367.0
margin_bottom = 22.0

[node name="label_container_title" type="Label" parent="lobby_container/Panel/vbox_container"]
margin_top = 26.0
margin_right = 367.0
margin_bottom = 40.0
text = "Waiting for Players"
align = 1
valign = 1

[node name="vbox_container" type="VBoxContainer" parent="lobby_container/Panel/vbox_container"]
margin_top = 44.0
margin_right = 367.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="lobby_container/Panel"]
margin_left = 24.0
margin_top = 60.0
margin_right = 111.0
margin_bottom = 74.0
text = "LOBBY_NAME"

[node name="Label2" type="Label" parent="lobby_container/Panel"]
margin_left = 280.0
margin_top = 59.0
margin_right = 370.0
margin_bottom = 73.0
text = "LOBBY_READY"
align = 2

[node name="itemlist_players" type="ItemList" parent="lobby_container/Panel"]
margin_left = 23.0
margin_top = 77.0
margin_right = 321.0
margin_bottom = 225.0
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false ]

[node name="itemlist_players_ready" type="ItemList" parent="lobby_container/Panel"]
margin_left = 324.0
margin_top = 79.0
margin_right = 383.0
margin_bottom = 227.0
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false ]

[node name="hbox_buttons" type="HBoxContainer" parent="lobby_container/Panel"]
margin_left = 16.0
margin_top = 235.0
margin_right = 383.0
margin_bottom = 255.0
alignment = 2

[node name="button_cancel" type="Button" parent="lobby_container/Panel/hbox_buttons"]
margin_left = 34.0
margin_right = 204.0
margin_bottom = 20.0
text = "LOBBY_BUTTON_CANCEL"

[node name="button_start" type="Button" parent="lobby_container/Panel/hbox_buttons"]
margin_left = 208.0
margin_right = 367.0
margin_bottom = 20.0
text = "LOBBY_BUTTON_START"

[connection signal="pressed" from="menu_container/Panel/vbox_container/hbox_tabs/button_host" to="." method="_on_button_host_pressed"]
[connection signal="pressed" from="menu_container/Panel/vbox_container/hbox_tabs/button_join" to="." method="_on_button_join_pressed"]
[connection signal="focus_exited" from="menu_container/Panel/vbox_container/host_container/grid_host/text_server_name" to="." method="_on_host_text_server_name_focus_exited"]
[connection signal="focus_exited" from="menu_container/Panel/vbox_container/host_container/grid_host/text_port" to="." method="_on_host_text_port_focus_exited"]
[connection signal="pressed" from="menu_container/Panel/vbox_container/host_container/hbox_host_buttons/button_cancel" to="." method="_on_button_cancel_pressed"]
[connection signal="pressed" from="menu_container/Panel/vbox_container/host_container/hbox_host_buttons/button_continue" to="." method="_on_host_button_continue_pressed"]
[connection signal="focus_exited" from="menu_container/Panel/vbox_container/join_container/grid_join/text_ip_address" to="." method="_on_join_text_ip_address_focus_exited"]
[connection signal="focus_exited" from="menu_container/Panel/vbox_container/join_container/grid_join/text_port" to="." method="_on_join_text_port_focus_exited"]
[connection signal="pressed" from="menu_container/Panel/vbox_container/join_container/hbox_join_buttons/button_cancel" to="." method="_on_button_cancel_pressed"]
[connection signal="pressed" from="menu_container/Panel/vbox_container/join_container/hbox_join_buttons/button_connect" to="." method="_on_join_button_connect_pressed"]
[connection signal="item_selected" from="lobby_container/Panel/itemlist_players_ready" to="." method="_on_itemlist_players_ready_item_selected"]
[connection signal="pressed" from="lobby_container/Panel/hbox_buttons/button_cancel" to="." method="_on_lobby_button_cancel_pressed"]
[connection signal="pressed" from="lobby_container/Panel/hbox_buttons/button_start" to="." method="_on_lobby_button_start_pressed"]
